<resources>
    <string name="app_name">RubikSolver</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">About</string>
    <string name="title_activity_update_values">UpdateValues</string>
    <string name="button_side">Set Side</string>
    <string name="button_update">Manual Set</string>
    <string name="button_set">Next</string>
    <string name="button_cancel">Reset</string>
    <string name="ad_id_input">ca-app-pub-8310017333664976/2617849449</string>
    <string-array name="manual_spinner_values">
        <item>W</item>
        <item>B</item>
        <item>R</item>
        <item>Y</item>
        <item>G</item>
        <item>O</item>
    </string-array>
    <string name="title_activity_rubik_viewer">RubikViewer</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="title_activity_ar">ARActivity</string>
    <string name="ar_link">AR input</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
