<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.pennapps.f15.rubiksolver.ARActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/menu_next"
        android:title="@string/button_side"
        android:icon="@drawable/ic_forward_white_36dp"
        app:showAsAction="always"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/menu_update"
        android:title="@string/button_update"
        android:icon="@drawable/ic_create_white_36dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
</menu>
