<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.android.pennapps.f15.rubiksolver.InputActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner1"
            android:layout_row="0"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_column="0"/>

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner2"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_row="0"
            android:layout_column="1"/>

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner3"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_row="0"
            android:layout_column="2"/>

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner4"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_row="1"
            android:layout_column="0"/>

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner5"
            android:layout_row="1"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_column="1"/>

        <Spinner
            android:layout_width="77dp"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_height="48dp"
            android:id="@+id/spinner6"
            android:layout_row="1"
            android:layout_column="2"/>

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner7"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_row="2"
            android:layout_column="0"/>

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner8"
            android:layout_row="2"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"
            android:layout_column="1"/>

        <Spinner
            android:layout_width="77dp"
            android:layout_height="48dp"
            android:id="@+id/spinner9"
            android:layout_row="2"
            android:layout_column="2"
            android:spinnerMode="dropdown"
            android:entries="@array/manual_spinner_values"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instructions"
            android:textSize="28dp"
            android:layout_columnSpan="4"
            android:layout_row="3"
            android:layout_column="0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_set"
            android:id="@+id/button"
            android:layout_row="4"
            android:layout_column="1"
            android:onClick="next"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/button2"
            android:layout_row="4"
            android:onClick="reset"
            android:layout_column="3"/>

        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="4"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_id_input"
            android:id="@+id/input_ad"
            >

        </com.google.android.gms.ads.AdView>
    </GridLayout>
</RelativeLayout>